calico-policies/public-network-isolation/br-sao/allow-public-service-endpoint.yaml
# This policy allows outgoing network traffic from worker nodes in each zone of
# your cluster to the cluster master through the public service endpoint. Note
# that you must allow outgoing traffic for all of the zones within the region.

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-public-service-endpoint
spec:
  egress:
  - action: Allow
    destination:
      nets:
      # Control plane IP addresses for br-sao: sao01, sao04, sao05
      - 104.94.220.129/32
      - 104.94.221.129/32
      - 104.94.222.137/32
      - 104.94.223.137/32
      - 104.96.176.129/32
      - 104.96.177.129/32
      - 104.96.178.131/32
      - 104.96.179.131/32
      - 104.96.180.128/32
      - 104.96.181.128/32
      - 163.107.65.74/32
      - 163.107.65.194/32
      - 163.107.65.202/32
      - 163.109.65.146/32
      - 163.109.65.154/32
      - 163.109.65.242/32
      - 169.57.159.130/32
      - 169.57.161.130/32
      - 169.57.254.50/32
      ports:
      - 20000:32767
      - 443
    protocol: UDP
    source: {}
  - action: Allow
    destination:
      nets:
      # Control plane IP addresses for br-sao: sao01, sao04, sao05
      - 104.94.220.129/32
      - 104.94.221.129/32
      - 104.94.222.137/32
      - 104.94.223.137/32
      - 104.96.176.129/32
      - 104.96.177.129/32
      - 104.96.178.131/32
      - 104.96.179.131/32
      - 104.96.180.128/32
      - 104.96.181.128/32
      - 163.107.65.74/32
      - 163.107.65.194/32
      - 163.107.65.202/32
      - 163.109.65.146/32
      - 163.109.65.154/32
      - 163.109.65.242/32
      - 169.57.159.130/32
      - 169.57.161.130/32
      - 169.57.254.50/32
      ports:
      - 20000:32767
      - 443
    protocol: TCP
    source: {}
  order: 1500
  selector: ibm.role == 'worker_public'
  types:
  - Egress
