calico-policies/public-network-isolation/br-sao/allow-public-services.yaml
# This policy allows outgoing network traffic from worker nodes to other IBM Cloud services.
# The example nets and ports in this policy are for IBM Cloud Container Registry, IBM Cloud
# IBM Cloud Monitoring, IBM Cloud Logs, and the managed Istio add-on.

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-public-services
spec:
  egress:
  - action: Allow
    destination:
      nets:
      # IBM Cloud Container Registry: Global registry
      - 169.60.98.80/29
      - 169.62.37.240/29
      - 169.63.104.232/29
      - 169.47.153.160/28 
      - 103.41.69.127/32
      - 103.41.69.114/32
      - 103.41.69.115/32
      # IBM Cloud Container Registry: US South, US East, and São Paulo nets for your own registry
      - 163.107.68.16/29
      - 163.109.67.96/29
      - 169.57.158.16/29
      - 169.61.46.80/29
      - 169.61.135.160/29
      - 169.61.234.224/29
      - 103.41.69.118/32
      - 103.41.69.122/32
      - 103.41.69.124/32
      - 103.41.70.140/32
      - 103.41.70.138/32
      - 103.41.70.137/32
      - 103.41.70.148/32
      - 103.41.70.146/32
      - 103.41.70.145/32
      ports:
      - 443
      - 4443
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      nets:
      # IBM Cloud Monitoring: br-sao
      # Taken from: https://cloud.ibm.com/docs/monitoring?topic=monitoring-endpoints
      - 163.107.66.98/32
      - 163.109.67.242/32
      - 169.57.141.43/32
      # IBM Cloud Monitoring: US South nets
      - 169.46.0.70/32
      - 169.47.102.30/32
      - 169.47.227.243/32
      - 169.48.214.70/32
      - 169.60.151.174/32
      - 169.62.255.114/32
      - 169.62.255.116/32
      ports:
      - 6443
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      nets:
      # IBM Cloud Logs: US South nets
      - 169.47.224.74/32
      - 169.47.224.77/32
      - 169.48.237.107/32
      - 169.48.237.109/32
      - 169.60.166.44/32
      - 169.60.166.45/32
      # New IP addresses added on 1/20/2023
      - 163.107.67.3/32
      - 163.107.68.196/32
      - 163.109.68.98/32 
      # End new IP address list
      # CIDR Blocks added on 7/26/2023
      -  163.107.65.208/28
      -  163.107.74.32/27
      -  163.109.67.224/28
      -  163.109.74.0/27
      -  169.57.178.32/27
      -  169.57.222.224/28
      # End CIDR Blocks
      ports:
      - 443
      - 80
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      ports:
      # Managed Istio add-on: Egress gateway
      - 80
      - 15443
    protocol: TCP
    source: {}
  ingress:
  - action: Allow
    destination:
      ports:
      # Managed Istio add-on: Ingress gateway and istiod control plane
      - 443
      - 853
      - 15010
      - 15012
      - 15014
      # Managed Istio add-on: Knative cluster local gateway
      - 80
      - 15021
      - 15443
    protocol: TCP
    source: {}
  order: 1800
  selector: ibm.role == 'worker_public'
  types:
  - Egress
  - Ingress
